# Critical_Role_summarization

./: .gitmodules  LICENSE  README.md  pyproject.toml
CRD3_summarization/loaders/: CRD3.yaml  CRD3Dataset.py
CRD3_summarization/models/: Trainer.py
conda/: environment.yml  requirements.txt
conf/: CRD3Dataset_all.yaml  CRD3Dataset_mistral_train.yaml  CRD3Dataset_mistral_unsloth_test.yaml  CRD3Dataset_mistral_unsloth_train.yaml  CRD3Dataset_mistral_unsloth_val.yaml  CRD3Dataset_mistrallite_test.yaml  CRD3Dataset_mistrallite_train.yaml  CRD3Dataset_mistrallite_val.yaml  CRD3Dataset_test.yaml  CRD3Dataset_train.yaml  CRD3Dataset_train_vocab.yaml  CRD3Dataset_val.yaml  check_dataset_output.yaml  dataset_train.yaml  ds_zero3_cpu.yaml  train.yaml  train_crd3.yaml  train_dialogsum.yaml
data/: C3E001.txt  CRD3_spkr_vocab_hash_idxs.npy  CRD3_vocab_hash_idxs.npy  CR_blurbs.csv  CR_blurbs.tsv  check_files  speaker_tokenizer.json  test_files  tokenizer.json  train_files  val_files
data/CRD3_spkr_vocab/: strings.json
data/CRD3_vocab/: strings.json
exploration/: get_data_stats.ipynb
scripts/: check_dataset_output.py  check_load_mistral.py  count_test_chunks.sh  count_train_chunks.sh  count_val_chunks.sh  create_speaker_annotation.py  dowload_critical_role_data.py  finetune_mistrallite_qlora.py  generate_qlora_mistral.py  test_load_mistral.py  train.yaml  train_CRD3_chunk_summaries.py  train_qlora__mistral.py  train_saasr.py  train_tokenizer.py
src/: setup.py
src/CRD3_summarization/: CRD3Datasets.py  CRD3SummarizationModel.py  SASR.py  (+2 more)
tests/: test_dataset.py
(+36 files in other folders)
